[package]
name = "encryptf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orion = { version = "0.17.4", features = ["safe_api", "serde"] }
serde = { version = "1.0.156", features = ["derive"] }
clap = { version = "4.1.8", features = ["derive"] }
bincode = "1.3.3"
rpassword = "7.2.0"
